2017-10-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-run-echangelog): Drop echangelog support,
	gentoolkit-dev is deprecated and gentoolkit does now provide the
	command any more.
	(ebuild-mode-map, ebuild-mode-menu): Drop keybinding and menu
	entry for ebuild-run-echangelog.
	* ebuild-mode.texi (ebuild-mode): Update documentation.

	* glep-mode.el (glep-mode-insert-skeleton): Update URLs of GLEP 1
	and GLEP 2. Update info on header format from GLEP 1.

2017-10-14  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.39 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.texi (glep-mode): Document the new mode.

2017-09-17  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el: New file. Mode for editing Gentoo Linux
	Enhancement Proposals that are written in reStructuredText.
	* Makefile (DISTFILES): Add glep-mode.el.

2017-09-15  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.38 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-04-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.37 released.

	* ebuild-mode.el (ebuild-mode-make-keywords-list): XEmacs 21.4
	doesn't have delete-dups, use delete-duplicates instead.

	* Version 1.36 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-make-keywords-list): Call regexp-opt
	without duplicates in its argument list.

2017-03-31  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-before-save):
	Call ebuild-mode-update-copyright only once per buffer.

2017-03-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.35 released.

2017-03-08  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	Account for news item format 2.0.
	(gentoo-newsitem-format-list): New variable.

2017-03-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.34 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
